--- a/css/ai.css
+++ b/css/ai.css
@@ -88,12 +88,11 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 400px;
-    max-height: 750px;
+    width: 400px;
+    height: 375px;
     min-height: auto;
     background-color: #F6F6F6;
-    padding: 50px;
-    padding-top: 25px;
+    padding: 25px;
     border-radius: 30px;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
     transform: translateY(50%);
@@ -126,10 +125,6 @@ html {
 .card .profile-description p {
     margin: 5px 0;
     color: black;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    white-space: normal;
-    text-align: justify;
 }
 
 .card .profile-pic {
@@ -146,7 +141,4 @@ html {
     font-family: "Open Sans";
     padding: 10px;
     width: 100%;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    hyphens: auto;
 }
