--- a/css/our-team-modal.css
+++ b/css/our-team-modal.css
@@ -61,6 +61,7 @@
     font-weight: bold;
     cursor: pointer;
     z-index: 1;
+    padding-right: 10px;
 }
 
 .staff-modal .close:hover {
@@ -79,9 +80,10 @@
 
 /* Typography */
 .modal-column h2 {
-    margin-top: 0;
+    margin: 15px;
     color: #333;
     font-size: 24px;
+    text-align: center;
 }
 
 .modal-column h3 {
@@ -90,35 +92,29 @@
     margin-bottom: 20px;
 }
 
-.modal-column p {
+
+
+.modal-column p, .modal-column a {
+    font-size: 18px;
     margin-bottom: 10px;
     line-height: 1.5;
+    color: black;
+    text-decoration: none;
 }
 
 .modal-column strong {
     color: #333;
-    font-size: 16px;
+    font-size: 18px;
+}
+
+.modal-column a:hover {
+    text-decoration: underline;
 }
 
 /* Contact links */
-.contact-info {
+.personal-info {
     margin-top: 20px;
     text-align: center;
-}
-
-.contact-info a {
-    display: block;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    text-decoration: none;
-    padding: 5px 10px;
-    border-radius: 4px;
-    color: #000000;
-    text-align: left;
-}
-
-.contact-info a:hover {
-    text-decoration: underline;
 }
 
 /* Mobile responsive */
